@@ -4,6 +4,10 @@ Development Progress	:
 ---------------------------
 
 2011-07-25 (SVN):
+    * utils, cmdlib.c (GetTime): Replaced time() by platform specific
+      code.
+
+2011-07-25 (SVN):
     * sys_unix.c, sys_win.c, sys_dos.c: Added Sys_DateTimeString() as a
       new helper procedure to get date/time in the "MM/DD/YYYY HH:MM:SS"
       format.
